# fastapi

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
routers/: drivers.py  trips.py  users.py
sql_app/: schemas.py
